Mouse cursor inappropriately changes icon
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: tgnff242, Assigned: stransky)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:121.0) Gecko/20100101 Firefox/121.0
Steps to reproduce:
On KDE, both X11 and Wayland:
- Move the mouse to the corner that triggers the Overview (which presents all open windows in current virtual desktop).
- Select a Firefox window to focus on it. Make sure it's in a position that the pointer will be over Firefox afterwards.
Actual results:
The cursor often, but not always, changes to the resizing icon until you hover over some text or a link. Even when not stuck, it seems it changes to the resizing icon for an instant.
There's a similar issue filed on KDE bug tracker: https://bugs.kde.org/show_bug.cgi?id=474039
Expected results:
This seems to be regressed by Bug 1826778. I don't think I have this issue for more than a month now (the patch on Firefox landed six months ago), so it's possible that there was some change on KDE's side that made it worse.
Comment 2•1 year ago
|
||
:stransky, since you are the author of the regressor, bug 1826778, could you take a look?
For more information, please visit BugBot documentation.
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 3•1 year ago
|
||
Updated•1 year ago
|
Comment 5•1 year ago
|
||
Set release status flags based on info from the regressing bug 1826778
Comment 6•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Comment 7•1 year ago
|
||
The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox121
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 8•1 year ago
|
||
Comment on attachment 9364669 [details]
Bug 1865739 [Linux] Lock mouse cursor for PIP windows only r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Incorrect cursor type on KDE / main Firefox window.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Minor patch, we restrict cursor management to PIP window only.
- String changes made/needed:
- Is Android affected?: No
Comment 9•1 year ago
•
|
||
Comment on attachment 9364669 [details]
Bug 1865739 [Linux] Lock mouse cursor for PIP windows only r?emilio
Approved for 121.0b3
Comment 10•1 year ago
|
||
uplift |
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Comment 11•1 year ago
•
|
||
Hello! I installed a Kubuntu 23.10 KDE on a VM and tried to reproduce the issue with X11. On the affected builds I can sometimes see a resize cursor
for a split second after Entering Overview (Windows key+ W) and choosing a Firefox window. However the issue is very intermittent for me and I could not make the resize icon stay like explained in comment 0, even if I tried multiple times.
I tried to verify the issue with Firefox 122.0a1 (2023-11-29) and 121.0b4 on the same VM, but given that the issue is so intermittent, I can not guarantee that it is fixed. I am dropping the qe+ flag based on the above and the fact that I have no reliable steps to reproduce/ verify this issue.
Given the fact that the issue is more reproducible on your side based on the mozregression pushlog can you please also try to see if the issue is fixed with the latest Firefox beta and the latest Firefox Nightly? Thank you in advance!
Reporter | ||
Comment 12•1 year ago
|
||
I tested it on Nightly and beta, and although I still see the mouse cursor changing to a resize icon for a fraction of a second, it doesn't get stuck any more.
Comment 13•1 year ago
•
|
||
(In reply to tgn-ff from comment #12)
I tested it on Nightly and beta, and although I still see the mouse cursor changing to a resize icon for a fraction of a second, it doesn't get stuck any more.
Thank you very much for the verification.
Should we open a new issue for the remaining problem? I understand that the issue is still reproducible but not as visible as before.
Assignee | ||
Comment 14•1 year ago
|
||
(In reply to Alexandru Trif, Desktop QA [:atrif] from comment #13)
Should we open a new issue for the remaining problem? I understand that the issue is still reproducible but not as visible as before.
It may be something different and unrelated, the original problem here is for PIP windows. So it's up to you.
(In reply to Martin Stránský [:stransky] (ni? me) from comment #14)
(In reply to Alexandru Trif, Desktop QA [:atrif] from comment #13)
Should we open a new issue for the remaining problem? I understand that the issue is still reproducible but not as visible as before.
It may be something different and unrelated, the original problem here is for PIP windows. So it's up to you.
Thank you! I think that filling one for tracking purposes would be fine.
Reporter, do you want to file the issue? If you don't have the time I can do that. Thank you in advance!
Reporter | ||
Comment 16•1 year ago
|
||
That has a different regressor. I've filed Bug 1868752.
Description
•