Bug 1865739 [Linux] Lock mouse cursor for PIP windows only r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D194189